--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,7 +1,7 @@
 [
   {
-    "name": "NotyStack Android",
-    "desc": "Fully fledged android CRUD app based on different design patterns. Built using Java, XML, SQLite, Firebase, RoomDB, MVVM.",
+    "name": "Desain Grafis",
+    "desc": "My design results still have many shortcomings.",
     "image": "notystackandroid",
     "category": "android",
     "links": {
@@ -10,13 +10,12 @@
     }
   },
   {
-    "name": "SPPU Engg Prep",
-    "desc": "All in one SPPU Engineering resources. Built using Java, XML and Firebase.",
+    "name": "The Picture Of Team",
+    "desc": "an organization that seeks to develop software-focused skills.",
     "image": "sppuprepandroid",
     "category": "android",
     "links": {
       "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/sppu-prep-android"
     }
   },
   {
