--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,7 +2,7 @@
   {
     "name": "Desain Grafis",
     "desc": "My design results still have many shortcomings.",
-    "image": "Projects1.jpg",
+    "image": "",
     "category": "android",
     "links": {
       "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
