--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,12 +1,11 @@
 [
   {
-    "name": "NotyStack Android",
+    "name": "Desain Grafis",
     "desc": "Fully fledged android CRUD app based on different design patterns. Built using Java, XML, SQLite, Firebase, RoomDB, MVVM.",
     "image": "notystackandroid",
     "category": "android",
     "links": {
       "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/notystack-android"
     }
   },
   {
@@ -16,7 +15,6 @@
     "category": "android",
     "links": {
       "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/sppu-prep-android"
     }
   },
   {
@@ -26,7 +24,6 @@
     "category": "android",
     "links": {
       "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/newsbox-android"
     }
   },
   {
@@ -36,7 +33,6 @@
     "category": "android",
     "links": {
       "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/weatherly-android"
     }
   },
   {
@@ -46,7 +42,6 @@
     "category": "mern",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/instagram-mern"
     }
   },
   {
@@ -56,7 +51,6 @@
     "category": "mern",
     "links": {
       "view": "https://flipkartwebs.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/flipkart-mern"
     }
   },
   {
@@ -66,7 +60,6 @@
     "category": "mern",
     "links": {
       "view": "https://resumegenx.netlify.app/",
-      "code": "https://github.com/jigar-sable/resumegen"
     }
   },
   {
@@ -76,7 +69,6 @@
     "category": "mern",
     "links": {
       "view": "https://reactjsprojects.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/React-Projects"
     }
   },
   {
@@ -86,7 +78,6 @@
     "category": "lamp",
     "links": {
       "view": "https://github.com/jigar-sable/Flipkart-Clone-PHP",
-      "code": "https://github.com/jigar-sable/Flipkart-Clone-PHP"
     }
   },
   {
@@ -96,7 +87,6 @@
     "category": "basicweb",
     "links": {
       "view": "https://jigar-sable.github.io/JavaScript-Projects",
-      "code": "https://github.com/jigar-sable/JavaScript-Projects"
     }
   },
   {
@@ -106,7 +96,6 @@
     "category": "mern",
     "links": {
       "view": "https://github.com/jigar-sable/web-ui-clones",
-      "code": "https://github.com/jigar-sable/web-ui-clones"
     }
   },
   {
@@ -116,7 +105,6 @@
     "category": "mern",
     "links": {
       "view": "https://crypto-tracker-react-project.netlify.app/",
-      "code": "https://github.com/jigar-sable/React-Projects/tree/main/crypto-tracker"
     }
   },
   {
@@ -126,7 +114,6 @@
     "category": "mern",
     "links": {
       "view": "https://hulu-clone-jigar-sable.vercel.app/",
-      "code": "https://github.com/jigar-sable/React-Projects/tree/main/hulu-clone"
     }
   },
   {
@@ -136,7 +123,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "https://github.com/jigar-sable/Portfolio-Website"
     }
   },
   {
@@ -146,7 +132,6 @@
     "category": "basicweb",
     "links": {
       "view": "https://composey.netlify.app/",
-      "code": "https://github.com/jigar-sable/LGMVIP-WebDev"
     }
   },
   {
@@ -156,7 +141,6 @@
     "category": "android",
     "links": {
       "view": "https://github.com/jigar-sable/Android-Webview#webapp--android-webview-app",
-      "code": "https://github.com/jigar-sable/Android-Webview"
     }
   },
   {
@@ -166,7 +150,6 @@
     "category": "lamp",
     "links": {
       "view": "https://tsfbank.rf.gd",
-      "code": "https://github.com/jigar-sable/TSF-Bank"
     }
   },
   {
@@ -176,7 +159,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -186,7 +168,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -196,7 +177,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -206,7 +186,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -216,7 +195,6 @@
     "category": "mern",
     "links": {
       "view": "https://github.com/jigar-sable/WebChat#webchat",
-      "code": "https://github.com/jigar-sable/WebChat"
     }
   },
   {
@@ -226,7 +204,6 @@
     "category": "android",
     "links": {
       "view": "https://github.com/jigar-sable/Basic_Banking_App#basic-banking-app",
-      "code": "https://github.com/jigar-sable/Basic_Banking_App"
     }
   },
   {
@@ -236,7 +213,6 @@
     "category": "basicweb",
     "links": {
       "view": "https://jigar-sable.github.io/JavaScript-Projects/projects/issuetracker",
-      "code": "https://github.com/jigar-sable/JavaScript-Projects/tree/main/projects/issuetracker"
     }
   },
   {
@@ -246,7 +222,6 @@
     "category": "lamp",
     "links": {
       "view": "https://github.com/jigar-sable/PHP-Projects/tree/main/pblform#pbl-portal",
-      "code": "https://github.com/jigar-sable/PHP-Projects/tree/main/pblform"
     }
   },
   {
@@ -256,7 +231,6 @@
     "category": "basicweb",
     "links": {
       "view": "https://jigar-sable.github.io/LinkList",
-      "code": "https://github.com/jigar-sable/LinkList"
     }
   },
   {
@@ -266,7 +240,6 @@
     "category": "basicweb",
     "links": {
       "view": "https://jigar-sable.github.io/JavaScript-Projects/api-projects/saas-jobs",
-      "code": "https://github.com/jigar-sable/JavaScript-Projects/tree/main/api-projects/saas-jobs"
     }
   },
   {
@@ -276,7 +249,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -286,7 +258,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -296,7 +267,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -306,7 +276,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -316,7 +285,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -326,7 +294,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   },
   {
@@ -336,7 +303,6 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
     }
   }
 ]
