--- a/projects/projects.json
+++ b/projects/projects.json
@@ -42,7 +42,7 @@
   {
     "name": "Instagram MERN",
     "desc": "Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO",
-    "image": src="Project1.png"
+    "image": "Project1.png"
     "category": "mern",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
