--- a/projects/projects.json
+++ b/projects/projects.json
@@ -40,8 +40,8 @@
     }
   },
   {
-    "name": "Instagram MERN",
-    "desc": "Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO",
+    "name": "Desain Grafis",
+    "desc": "A graphic design that still has many shortcomings | Edited using Alightmotion",
     "image": "Projects1",
     "category": "mern",
     "links": {
