--- a/projects/projects.json
+++ b/projects/projects.json
@@ -46,6 +46,7 @@
     "category": "mern",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
+      "code": "https://github.com/jigar-sable/flipkart-mern"
     }
   },
   {
