--- a/projects/projects.json
+++ b/projects/projects.json
@@ -46,7 +46,7 @@
     "category": "mern",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/instagram-mern"
+      "code": "https://github.com/FazZenterprise"
     }
   },
   {
@@ -56,7 +56,7 @@
     "category": "mern",
     "links": {
       "view": "https://flipkartwebs.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/flipkart-mern"
+      "code": "https://github.com/FazZenterprise"
     }
   },
   {
@@ -66,7 +66,7 @@
     "category": "mern",
     "links": {
       "view": "https://resumegenx.netlify.app/",
-      "code": "https://github.com/jigar-sable/resumegen"
+      "code": "https://github.com/FazZenterprise"
     }
   },
   {
@@ -76,7 +76,7 @@
     "category": "mern",
     "links": {
       "view": "https://reactjsprojects.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/React-Projects"
+      "code": "https://github.com/FazZenterprise"
     }
   },
   {
