--- a/projects/projects.json
+++ b/projects/projects.json
@@ -50,9 +50,9 @@
     }
   },
   {
-    "name": "Flipkart MERN",
-    "desc": "Full-Stack Flipkart with Admin Dashboard and Paytm Payment Gateway. MERN Stack WebApp, ready to use for business.",
-    "image": "flipkartmern",
+    "name": "My Team",
+    "desc": ".............",
+    "image": "Newimage",
     "category": "mern",
     "links": {
       "view": "https://flipkartwebs.herokuapp.com/",
@@ -60,9 +60,9 @@
     }
   },
   {
-    "name": "ResumeGen",
-    "desc": "ReactJS Basic Resume Generator which will generate customized resume in few minutes on your requirements.",
-    "image": "resumegen",
+    "name": "My Editing ",
+    "desc": "............",
+    "image": "Newimage",
     "category": "mern",
     "links": {
       "view": "https://resumegenx.netlify.app/",
@@ -70,9 +70,9 @@
     }
   },
   {
-    "name": "React-Projects",
-    "desc": "Full-Stack project dashboard which is collection of projects built on the React library.",
-    "image": "reactprojects",
+    "name": "My Project",
+    "desc": "...........",
+    "image": "Newimage",
     "category": "mern",
     "links": {
       "view": "https://reactjsprojects.herokuapp.com/",
@@ -80,8 +80,8 @@
     }
   },
   {
-    "name": "Flipkart PHP",
-    "desc": "Full-Stack Flipkart Clone Using LAMP Stack. With all major features and OTP authentication and Cashfree payment gateway.",
+    "name": ".......",
+    "desc": "..............",
     "image": "flipkartphp",
     "category": "lamp",
     "links": {
@@ -90,9 +90,9 @@
     }
   },
   {
-    "name": "JavaScript Projects Website",
-    "desc": "This website is specially build to showcase all major javaScript projects. All my javaScript based projects are in it.",
-    "image": "jspro",
+    "name": ".............",
+    "desc": ".............",
+    "image": "Newimage",
     "category": "basicweb",
     "links": {
       "view": "https://jigar-sable.github.io/JavaScript-Projects",
